--- a/.github/workflows/contrib_snake.yml
+++ b/.github/workflows/contrib_snake.yml
@@ -1,9 +1,6 @@
 # GitHub Action for generating a contribution graph with a snake eating your contributions.
-
 name: Generate Snake
-
 # Controls when the action will run. This action runs every 6 hours.
-
 on:
   schedule:
     # every 6 hours
@@ -41,7 +38,7 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
+          branch: main
           force: true
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
